; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_940ctl.c_YM2612ResetChip_940.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_940ctl.c_YM2612ResetChip_940.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shared_data = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [41 x i8] c"YM2612ResetChip_940: reset before init?\0A\00", align 1
@JOB940_YM2612RESETCHIP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @YM2612ResetChip_940() #0 {
  %1 = load i32*, i32** @shared_data, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  br label %10

5:                                                ; preds = %0
  %6 = call i32 (...) @YM2612ResetChip_()
  %7 = call i32 (...) @internal_reset()
  %8 = load i32, i32* @JOB940_YM2612RESETCHIP, align 4
  %9 = call i32 @add_job_940(i32 %8)
  br label %10

10:                                               ; preds = %5, %3
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @YM2612ResetChip_(...) #1

declare dso_local i32 @internal_reset(...) #1

declare dso_local i32 @add_job_940(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
